--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,7 +107,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS nodelet pluginlib roscpp uwds_msgs uwds
+  CATKIN_DEPENDS nodelet pluginlib roscpp rospy uwds_msgs uwds
 #  DEPENDS system_lib
 )
 
