--- a/package.xml
+++ b/package.xml
@@ -54,6 +54,7 @@
   <depend>roscpp</depend>
   <depend>uwds</depend>
   <depend>uwds_msgs</depend>
+  <depend>rospy</depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
